# thin-controller

./: .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Dockerfile  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build_container.yml  mypy.yml  pylint.yml  pytest.yml
terraform/: .terraform.lock.hcl  cloudfront.tf  fargate.tf  lambda_iam.tf  main.tf  providers.tf  scheduled_power_control.tf  tags.tf  terraform.tfvars.example  variables.tf  waf.tf
terraform/modules/scheduled_power_control/: main.tf  outputs.tf  variables.tf
tests/: test_api.py  test_ec2.py  test_main.py  test_model.py  test_schedule.py  test_scheduler.py
thin_controller/: __init__.py  __main__.py  ec2.py  handler.py  models.py  schedule.py  scheduler_handler.py
thin_controller/static/: index.html  styles.css
