[tool.poetry]
name = "thin-controller"
version = "0.0.1"
description = "Control your EC2 instances with a FastAPI instance in Lambda"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
mangum = "^0.19.0"
boto3 = "^1.35.71"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
loguru = "^0.7.3"
python-multipart = "^0.0.19"

[tool.poetry.scripts]
thin-controller = "thin_controller.__main__:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"
pytest = "^8.3.4"
types-boto3 = "^1.35.76"

[tool.pylint.MASTER]
max-line-length = 200

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "thin-controller"
description = "Control your EC2 instances with a FastAPI instance in Lambda"
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
