[tool.poetry]
name = "thin-controller"
version = "0.0.1"
description = "Control your EC2 instances with a FastAPI instance in Lambda"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
mangum = "^0.19.0"
boto3 = "^1.36.20"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
python-multipart = "^0.0.20"

[tool.poetry.scripts]
thin-controller = "thin_controller.__main__:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
mypy = "^1.15.0"
pytest = "^8.3.4"
types-boto3 = "^1.36.15"

[tool.pylint.MASTER]
max-line-length = 200

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "thin-controller"
description = "Control your EC2 instances with a FastAPI instance in Lambda"
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
