[project]
name = "thin-controller"
description = "Control your EC2 instances with a FastAPI instance in Lambda"
license = { text = "MIT" }
version = "0.0.2"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "mangum>=0.19.0",
    "boto3>=1.37.36",
    "pydantic-settings>=2.9.0",
    "uvicorn>=0.34.1",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.6,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.5,<9.0.0",
    "types-boto3>=1.37.36,<2.0.0",
    "pyright>=1.1.400",
    "coverage>=7.10.7",
    "coveralls>=4.0.1",
]


[project.scripts]
thin-controller = "thin_controller.__main__:cli"

# tool things

[tool.pylint.MASTER]
max-line-length = 200
load-plugins = "pylint_pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pyright]
exclude = ["terraform", ".venv"]

[tool.coverage.run]
omit = [
    "tests/*",                    # don't test the tests
    "terraform/*",                # no python here
    "thin_controller/handler.py", # only a stub for the Lambda handler
]
